# 2025202035_A3_Interim

./: README.md  TECHNICAL_REPORT.md  test_sync.sh
Peer2Peer-main/: readme.md
client/: CMakeLists.txt  client  client.cpp  client.h  dht.cpp  dht.h  download_manager.cpp  download_manager.h  file_operations.cpp  file_operations.h  file_share_manager.cpp  file_share_manager.h  file_utils.cpp  file_utils.h  makefile  network_utils.cpp  network_utils.h  p2p_protocol.cpp  p2p_protocol.h  peer_connection.cpp  peer_connection.h  piece_selector.cpp  piece_selector.h  simple_dht_test.cpp  test_dht.cpp  test_file_operations.cpp  tracker_client.cpp  tracker_client.cpp.bak  tracker_client.h  tracker_info.txt
client/chunks/A2.pdf_chunks_tmp_/1759417624/: chunk_0
client/chunks/GATE_2025_Scorecard.pdf_chunks/: chunk_4  chunk_5
client/chunks/GATE_2025_Scorecard.pdf_chunks_tmp_1759445947/: chunk_0  chunk_1  chunk_2  chunk_3
client/chunks/IMG_8512.MOV_chunks/: chunk_11  chunk_12  chunk_17  chunk_19  chunk_27  chunk_29  chunk_30  chunk_35  chunk_4  chunk_7  chunk_8
client/chunks/IMG_8512.MOV_chunks_tmp_/1759444437/: chunk_1  chunk_13  chunk_16  chunk_2  chunk_20  chunk_23  chunk_24  chunk_25  chunk_26  chunk_28  chunk_32  chunk_36  chunk_5
client/chunks/IMG_8512.MOV_chunks_tmp_1759445417/: chunk_0  chunk_10  chunk_14  chunk_15  chunk_18  chunk_21  chunk_22  chunk_3  chunk_31  chunk_33  chunk_34  chunk_6  chunk_9
client/chunks/MERN.pdf_chunks_tmp_1759446614/: chunk_0
test_run/: testfile.txt
tracker/: README.md  client_handler.cpp  client_handler.h  data_structures.cpp  (+9 more)
(+7 files in other folders)
